# design_patterns

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  report.sh  report.txt
.github/workflows/: cmake.yml
3rd/tlpi-book/: BUILDING
cpp11/: CMakeLists.txt  initializer_list1.cpp  integral_constant01.cpp
cpp17/: CMakeLists.txt  build.sh  inline02.cpp  struct01.cpp
cpp_lang/: CMakeLists.txt  NULL_zero_test.cpp  array1.cpp  array_ref_test.cpp  array_test.cpp  bitonic.cpp  c_interface.cpp  const_expr_test.cpp  const_right_ref.cpp  cpp_lang05.cpp  cpp_var.cpp  deque_test.cpp  dynamic_static_cast_test.cpp  functional_bind.cpp  global_var1.cpp  hello_world_test.cpp  if_constexpr_test.cpp  if_switch.cpp  list_test.cpp  literal_test.cpp  map_test.cpp  new_delete_test.cpp  no_discard_test.cpp  pod_type_test.cpp  printf_cout.cpp  priority_queue_test.cpp  re_test.cpp  span_test.cpp  stack_test.cpp  std_apply_test.cpp  string_test.cpp  struct01.cpp  struct02.cpp  tuple01.cpp  typeinfo_test.cpp  vector_test.cpp
cuda/: Makefile  build.sh  conv2d_transpose_test.cpp  conv_transpose.cpp  conv_transpose.h  conv_transpose_test.cpp  utils.h
cuda/data/: input.txt  output.txt
cuda/include/: channel_descriptor.h  cooperative_groups.h  cublas_api.h  cudaEGL.h  cudaEGLTypedefs.h  cudaGLTypedefs.h  cudaProfilerTypedefs.h  cudaTypedefs.h  cudaVDPAUTypedefs.h  cuda_awbarrier_helpers.h  cuda_bf16.h  cuda_bf16.hpp  cuda_egl_interop.h  cuda_occupancy.h  cuda_runtime_api.h  cudnn_adv_infer.h  cudnn_adv_train.h  cudnn_cnn_infer.h  cudnn_cnn_train.h  cudnn_ops_infer.h  cudnn_ops_train.h  cudnn_version.h  cufft.h  cufile.h  cupti_activity.h  cupti_callbacks.h  cupti_driver_cbid.h  cupti_pcsampling.h  cupti_pcsampling_util.h  cupti_profiler_target.h  cupti_result.h  cupti_runtime_cbid.h  cupti_version.h  curand_kernel.h  cusolverDn.h  cusolver_common.h  cusparse.h  driver_types.h  generated_cuda_meta.h  generated_cuda_runtime_api_meta.h  (+10 more)
cuda/sample/: build.sh  cnn.cpp
cutlass/: Makefile  test1.cu  test2.cu
eigen_test/: e1.cpp
include/: array_ref.h  err_exit.h
infer/: Makefile  cpu_utils.h  ort_model_opt.cpp  ort_test.cpp  trt_test.cpp  utils.h
json_test/: CMakeLists.txt  json_test1.cpp
leet/: Makefile  bst.cpp  p223.cpp  p2259.cpp  p924  p924.cpp  pre_order.cpp  tree_inoreder_traversal.cpp
lite_engine/: Makefile  cudnn_backend_api_test.cu  residual_block.cpp  residual_block.h  residual_block_test.cpp  tensor.h  utils.h
lru/: Makefile  lru.hpp  test.cpp
not_single/: extern_test_01.cpp  extern_test_01.h  extern_test_02.cpp  fstream_test.cpp  inline01.cpp  inline01.h
onnx/: change_input_batch.py  conv_gen.py  count_node.py  infer_shape.py  ort.py
openmp/: Makefile  hello.c
parallel/: async_test.cpp  atomic_flag_test.cpp  atomic_test.cpp  call_once_test.cpp  condition_variable_test.cpp  future_promise_test.cpp  lock_gaurd_test.cpp  packaged_task_test.cpp  thread1.cpp  thread2.cpp  thread_args.cpp  thread_move_test.cpp  unique_lock_test.cpp
patterns/: CMakeLists.txt  adl.cpp  bridge.cpp  builder.cpp  chain_of_responsibility.cpp  crtp.cpp  facade.cpp  factory.cpp  observer_test.cpp  singleton.cpp  strategy.cpp  table_driven.cpp
src/: adl.cpp  cpp_lang01.cpp  pimpl.cpp  singleton.cpp  templ.cpp
src/cpp_lang/: cpp_lang01.cpp  cpp_lang02.cpp  cpp_lang03.cpp  cpp_lang04.cpp
tlpi-book/: CHANGES  Makefile
tlpi-book/acl/: acl_update.c
tlpi-book/altio/: demo_sigio.c  epoll_input.c  multithread_epoll_wait.c  poll_pipes.c  self_pipe.c  t_select.c
tlpi-book/cap/: cap_launcher.c  check_password_caps.c  t_cap_get_pid.c  t_cap_set_file.c
tlpi-book/cgroups/: fork_bomb.c
tlpi-book/daemons/: become_daemon.c  t_syslog.c
tlpi-book/dirs_links/: file_type_stats.c  list_files.c  nftw_dir_tree.c  t_dirbasename.c  view_symlink.c
tlpi-book/filebuff/: mix23_linebuff.c  mix23io.c  write_bytes.c
tlpi-book/fileio/: atomic_append.c  large_file.c  seek_io.c  t_truncate.c
tlpi-book/filelock/: create_pid_file.c  region_locking.h
tlpi-book/files/: file_perms.c  t_chown.c  t_stat.c  t_utime.c
tlpi-book/filesys/: t_mount.c  t_umount.c
tlpi-book/inotify/: demo_inotify.c  rand_dtree.c
tlpi-book/lib/: alt_functions.h  get_num.c  get_num.h  tlpi_hdr.h
tlpi-book/loginacct/: dump_utmpx.c
tlpi-book/mmap/: anon_mmap.c
tlpi-book/namespaces/: Makefile  cred_launcher.c  demo_userns.c  make_orphans.c  ns_child_exec.c  pidns_init_sleep.c  simple_init.c  userns_child_exec.c  userns_functions.c
tlpi-book/pgsjc/: catch_SIGHUP.c  orphaned_pgrp_SIGHUP.c
tlpi-book/pipes/: fifo_seqnum_server.c  pipe_ls_wc.c  popen_glob.c
tlpi-book/pmsg/: mq_notify_sig.c  mq_notify_siginfo.c  mq_notify_sigwaitinfo.c  mq_notify_thread.c  mq_notify_via_signal.c  mq_notify_via_thread.c
tlpi-book/proc/: display_env.c  mem_segments.c
tlpi-book/procexec/: acct_on.c  acct_v3_view.c  acct_view.c  demo_clone.c  execlp.c  fork_file_sharing.c  fork_sig_sync.c  fork_stdio_buf.c  fork_whos_on_first.c  make_zombie.c  multi_wait.c  print_wait_status.h  simple_system.c  system.c  t_clone.c  t_execve.c
tlpi-book/procpri/: t_sched_getaffinity.c  t_sched_setaffinity.c  t_setpriority.c
tlpi-book/procres/: print_rlimit.h  print_rusage.c  rlimit_nproc.c  rusage.c  rusage_wait.c
tlpi-book/psem/: psem_timedwait.c  psem_unlink.c  psem_wait.c
tlpi-book/pshm/: pshm_unlink.c
tlpi-book/pty/: pty_fork.h  pty_master_open.h  pty_master_open_bsd.c
tlpi-book/seccomp/: dump_seccomp_filter.c  seccomp_functions.h  seccomp_perf.c  seccomp_trap_sigsys.c  seccomp_unotify_mkdir.c
tlpi-book/shlibs/: mod2.c
tlpi-book/signals/: Makefile  nonreentrant.c  ouch.c  sig_receiver.c  sig_speed_sigsuspend.c  siginterrupt.c  signal_functions.c  t_sigaltstack.c
tlpi-book/sockets/: i6d_ucase.h  (+20 more)
tool/: build.sh  prof_filter.cpp
tools/: Makefile
unix_api/: debug_define_test.cpp  dir_test.cpp  errno_test.cpp  fork1_test.cpp  gnu_test.cpp  read2_test.cpp  read_test.cpp  strtol_test.cpp  u_copy.cpp  u_lseek.cpp  u_tee.cpp  u_touch.cpp  uid_test.cpp
write_read_block/: Makefile  cv_test.cpp  rw_lock.hpp  shared.cpp  test.cpp
(+303 files in other folders)
